// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Supplicate (Approved) Bypass guard via direct token movement (should fail to affect reserves) ERC20.transfer and transferFrom into pool address do NOT update pool reserves 1`] = `
Object {
  "note": "Raw token transfers cannot spoof/mutate LPP reserves",
  "reservesAfter": Object {
    "a": "194750000000000000000",
    "u": "194750000000000000000",
  },
  "reservesBefore": Object {
    "a": "194750000000000000000",
    "u": "194750000000000000000",
  },
}
`;

exports[`Supplicate (Approved) Snapshots & sqrt pricing captures sqrtPriceX96 movement (if any) and reserve deltas for USDC->ASSET too 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "caller": Object {
    "after": Object {
      "a": "994891443167305236",
      "u": "0",
    },
    "before": Object {
      "a": "0",
      "u": "1000000000000000000",
    },
  },
  "direction": "USDC->ASSET",
  "poolQuote": "994891443167305236",
  "reserves": Object {
    "after": Object {
      "a": "193755108556832694764",
      "u": "195750000000000000000",
    },
    "before": Object {
      "a": "194750000000000000000",
      "u": "194750000000000000000",
    },
  },
  "sqrtPriceX96": Object {
    "implied": Object {
      "after": "79634982347456965771118830274",
      "before": "79228162514264337593543950336",
    },
    "stored": Object {
      "after": "79228162514264337593543950336",
      "before": "79228162514264337593543950336",
    },
  },
}
`;

exports[`Supplicate (Approved) Treasury-approved address executes rebalance 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "callerBalances": Object {
    "after": Object {
      "a": "0",
      "u": "994891443167305236",
    },
    "before": Object {
      "a": "1000000000000000000",
      "u": "0",
    },
  },
  "direction": "ASSET->USDC",
  "quotes": Object {
    "poolQuote": "994891443167305236",
    "routerStatic": "994891443167305236",
  },
  "reserves": Object {
    "after": Object {
      "a": "195750000000000000000",
      "u": "193755108556832694764",
    },
    "before": Object {
      "a": "194750000000000000000",
      "u": "194750000000000000000",
    },
  },
  "sqrtPriceX96": Object {
    "implied": Object {
      "after": "78823420943310241360681813811",
      "before": "79228162514264337593543950336",
    },
    "stored": Object {
      "after": "79228162514264337593543950336",
      "before": "79228162514264337593543950336",
    },
  },
}
`;
